# microblog

./: .justfile  Cargo.toml  LICENSE.md  README.md  dot-env
migrations/: 20240213233330_initial.sql
src/: main.rs  routes.rs  status.rs
