[package]
name = "microblog"
version = "0.1.0"
edition = "2021"
authors = ["C J Silverio <ceejceej@gmail.com>"]
license = "Parity-7.0.0"
readme = "README.md"
repository = "https://github.com/ceejbot/microblog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.13.2", features = ["axum", "axum-headers"] }
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.34", features = ["serde"] }
dotenvy = "0.15.7"
gsv-culture-ships = "0.2.0"
log = "0.4.20"
nanoid = "0.4.0"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
schemars = "0.8.16"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "time",
    "sqlx-macros",
    "migrate",
    "macros",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "json",
], default-features = false }
tokio = { version = "1.36.0", features = ["full"] }
